# vilm-lyrics-aligner

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  pyproject.toml  vilm-design.md
docs/: ARCHITECTURE.md  MAC_TEST_PLAN.md  USER_GUIDE.en.md  USER_GUIDE.ko.md
installer/: requirements-app.txt
lyrics_aligner/: __init__.py  audio.py  cleanup.py  cli.py  cue_mapping.py  desktop.py  device.py  hidden_vocals.py  languages.py  lyric_annotations.py  lyrics.py  matching.py  media.py  models.py  pipeline.py  platform_paths.py  process_runner.py  resolve_bridge.py  runtime_setup.py  segmentation.py  srt.py  start_verification.py  timing.py  timing_core.py  windows_install.py
resolve/: LyricsAligner.py
scripts/: analyze_alignment_debug.py  create_macos_icon.py  create_vilm_icon.py  inspect_vocal_activity.py  install_resolve_plugin.ps1  probe_resolve_audio_formats.py  profile_alignment_stages.py  profile_stable_ts.py  profile_whisper_short.py  replay_debug_alignment.py
tests/: test_automatic_hidden_vocals_disabled.py  test_avalonia_desktop_source.py  test_cleanup.py  test_cli_waveform.py  test_cue_mapping.py  test_demucs_io.py  test_desktop_range.py  test_desktop_source.py  test_device.py  test_hidden_cue_timing.py  test_installer_source.py  test_languages.py  test_lyric_annotations.py  test_lyrics.py  test_lyrics_paragraph_barriers.py  test_macos_packaging.py  test_matching.py  test_media.py  test_panel_async.py  test_panel_i18n.py  test_panel_modes.py  test_panel_trace.py  test_segmentation.py  (+22 more)
(+27 files in other folders)
