
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lyrics-aligner"
version = "1.0.0"
description = "Generate song subtitles by aligning known lyrics to a DaVinci Resolve timeline."
requires-python = ">=3.10"
dependencies = ["av>=14", "soundfile>=0.12"]

[project.optional-dependencies]
align = ["stable-ts==2.19.1"]
separate = ["demucs==4.0.1"]
dev = ["pytest>=8"]

[project.scripts]
lyrics-aligner = "lyrics_aligner.cli:main"

[project.gui-scripts]
vilm-lyrics-aligner = "lyrics_aligner.desktop:main"

[tool.setuptools.packages.find]
include = ["lyrics_aligner*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
